[project]
name = "mem-align"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "lets-plot>=4.11.0",
    "matplotlib>=3.11.1",
    "polars>=1.43.0",
    "tqdm>=4.68.4",
    "wandb>=0.28.0",
]
