[project]
name = "mem-align"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "torch==2.11.0",
    "torchvision==0.26.0",
]

[dependency-groups]
dev = [
    "tqdm>=4.68.4",
    "wandb>=0.28.0",
]

# This machine's NVIDIA driver is 570.86.15 == CUDA 12.8. Default PyPI torch
# wheels are CUDA 13 builds and abort with "driver is too old", so pin torch
# to PyTorch's cu128 index to match the driver exactly.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
